--- a/expense-manager-webapp/src/main/resources/templates/expenses-list.html
+++ b/expense-manager-webapp/src/main/resources/templates/expenses-list.html
@@ -7,6 +7,10 @@
 <body>
 	<h1>List of Expenses</h1>
 	<hr/>
+	<div>
+		<a th:href="@{/createExpense}">Create Expense </a>
+	</div>
+	<br/>
 	<table border="1">
 		<thead>
 			<th>Name</th>
