--- a/expense-manager-webapp/src/main/resources/templates/expenses-list.html
+++ b/expense-manager-webapp/src/main/resources/templates/expenses-list.html
@@ -17,13 +17,18 @@
 			<th>Descripton</th>
 			<th>Amount</th>
 			<th>Date</th>
+			<th>Actions</th>
 		</thead>
 		<tbody>
 			<tr th:each="expense : ${expenses}">
 				<td th:text="${expense.name}"></td>
 				<td th:text="${expense.description}"></td>
 				<td th:text="${expense.amount}"></td>
-				<td th:text="${expense.dateString}"></td>				
+				<td th:text="${expense.dateString}"></td>	
+				<td>
+					<a th:href="@{deleteExpense(id=${expense.expenseId})}" 
+					onclick = "return confirm('Are you sure you want to delete the expense?')"> Delete</a>
+				</td>			
 			</tr>
 		</tbody>
 	</table>
