--- a/expense-manager-webapp/src/main/resources/templates/expenses-list.html
+++ b/expense-manager-webapp/src/main/resources/templates/expenses-list.html
@@ -3,10 +3,22 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Expense Manager</title>
+<link rel="stylesheet" th:href="@{/css/jquery-ui.css}"><link>
 </head>
 <body>
 	<h1>List of Expenses</h1>
 	<hr/>
+	<form method="get" th:object="${filter}" th:action="@{/filterExpenses}">
+		Search by the keyword : <input type="text" placeholder="Enter keyword" th:field="*{keyword}"></input>
+		<select th:field="*{sortBy}">
+			<option value="date">Date</option>
+			<option value="amount">Amount</option>
+		</select>
+		<input type="text" id="startDate" placeholder="Start date" th:field="*{startDate}"></input>
+		<input type="text" id="endDate" placeholder="End date" th:field="*{endDate}"></input>
+		<input type="Submit" />
+	</form>
+	<br/>
 	<div>
 		<a th:href="@{/createExpense}">Create Expense </a>
 	</div>
@@ -34,5 +46,8 @@
 			</tr>
 		</tbody>
 	</table>
+	<script th:src="@{/js/jquery.js}"></script>
+	<script th:src="@{/js/jquery-ui.js}"></script>
+	<script th:src="@{/js/expenses-list.js}"></script>
 </body>
 </html>
