--- a/expense-manager-webapp/src/main/resources/templates/expenses-list.html
+++ b/expense-manager-webapp/src/main/resources/templates/expenses-list.html
@@ -8,6 +8,11 @@
 <body>
 	<h1>List of Expenses</h1>
 	<hr/>
+	<div>
+		<h2>You are viewing the expenses totaling of :
+			<span th:text="'&#8377'+${totalExpenses}"></span>
+		 </h2>
+	</div>
 	<form method="get" th:object="${filter}" th:action="@{/filterExpenses}">
 		Search by the keyword : <input type="text" placeholder="Enter keyword" th:field="*{keyword}"></input>
 		<select th:field="*{sortBy}">
