--- a/expense-manager-webapp/src/main/resources/templates/login.html
+++ b/expense-manager-webapp/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 	</div>
 	
 	<div>
-		<form th:action="@{/login}" method="post">
+		<form th:action="@{/login}" method="post" id="loginForm">
 			<input type="text" name="email" placeholder="Enter email"></input>
 			<br/><br/>
 			<input type="password" name="password" placeholder="Enter password"></input>
@@ -21,5 +21,10 @@
 			<button type="submit">Login</button>
 		</form>
 	</div>
+	
+	<script th:src="@{/js/jquery.js}"></script>
+	<script th:src="@{/js/jquery-validator.js}"></script>
+	<script th:src="@{/js/login.js}"></script>
+	
 </body>
 </html>
