--- a/expense-manager-webapp/src/main/resources/templates/expenses-list.html
+++ b/expense-manager-webapp/src/main/resources/templates/expenses-list.html
@@ -9,6 +9,10 @@
 	<h1>List of Expenses</h1>
 	<hr/>
 	<div>
+		<a th:href="@{/logout}">Logout</a>
+	</div>
+	
+	<div>
 		<h2>You are viewing the expenses totaling of :
 			<span th:text="'&#8377'+${totalExpenses}"></span>
 		 </h2>
