--- a/expense-manager-webapp/src/main/resources/templates/error.html
+++ b/expense-manager-webapp/src/main/resources/templates/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="https://thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Expense Manager</title>
@@ -7,5 +7,6 @@
 <body>
 <h1>Under Construction</h1>
 <p>Page you are looking for is under construction.Please come back later. </p>
+<a th:href="@{/expenses}">Home</a>
 </body>
 </html>
