--- a/expense-manager-webapp/src/main/resources/templates/login.html
+++ b/expense-manager-webapp/src/main/resources/templates/login.html
@@ -7,10 +7,6 @@
 <body>
 	<h1>Login</h1>
 	<hr/>
-	<div th:if="${successMessage}">
-		<h1>Success!</h1>
-		<p>Thanks for registering your account. Now you can start adding expenses! </p>
-	</div>
 	
 	<div>
 		<div th:if="${param.error}">
@@ -26,6 +22,7 @@
 			<br/><br/>
 			<button type="submit">Login</button>
 		</form>
+		<a th:href="@{/register}">Register</a>
 	</div>
 	
 	<script th:src="@{/js/jquery.js}"></script>
