--- a/expense-manager-webapp/src/main/resources/templates/response.html
+++ b/expense-manager-webapp/src/main/resources/templates/response.html
@@ -5,12 +5,20 @@
 <title>Expense Manager</title>
 </head>
 <body>
+
+	<div th:if="${successMessage}">
+		<h1>Success!</h1>
+		<p>Thanks for registering your account. Now you can start adding
+			expenses!</p>
+		<a th:href="@{/login}">Login</a>
+	</div>
+	
 	<div th:if="${notFound}">
 		<h1>Expense not available</h1>
 		<p th:text="${message}"></p>
 		<a th:href="@{/expenses}">Home</a>
 	</div>
-	
+
 	<div th:if="${serverError}">
 		<h1>Contact Administrator</h1>
 		<p>Something went wrong! Please contact administrator.</p>
