--- a/expense-manager-webapp/src/main/resources/templates/error.html
+++ b/expense-manager-webapp/src/main/resources/templates/error.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html xmlns:th="https://thymeleaf.org">
+<html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Expense Manager</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
+    <link rel="stylesheet" th:href="@{/css/base.css}" />
+    <link rel="stylesheet" th:href="@{/css/response.css}" />
 </head>
 <body>
-<h1>Under Construction</h1>
-<p>Page you are looking for is under construction.Please come back later. </p>
-<a th:href="@{/expenses}">Home</a>
+    <nav class="fixed-top bg-header-color py-4">
+        <div class="app-header">
+            <div class="d-flex justify-content-between align-items-center">
+                <a th:href="@{/expenses}" class="text-white">
+                            <span class="font-size-medium font-weight-bold">
+                                Expense Manager
+                            </span>
+                </a>
+            </div>
+        </div>
+    </nav>
+  <div class="container p-5 my-5 border container-top-margin">
+      <h1>Under Construction</h1>
+      <p>The page you are looking is under construction. Please come back later.</p>
+      <a th:href="@{/expenses}" class="btn button_default">Home</a>
+  </div>
+    <footer class="py-5">
+		<div class="container">
+			<p class="m-0 text-center text-dark">
+				Copyright &copy; Expense Manager - 2024 Designed and Developed by Ruchi.
+			</p>
+		</div>
+	</footer>
+  <script th:src="@{/js/bootstrap.js}"></script>
 </body>
 </html>
