--- a/expense-manager-webapp/src/main/resources/templates/login.html
+++ b/expense-manager-webapp/src/main/resources/templates/login.html
@@ -1,33 +1,66 @@
-<!DOCTYPE html>
-<html xmlns:th="https://thymeleaf.org">
+<!doctype html>
+<html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Expense Manager</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Expense Manager</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
+    <link rel="stylesheet" th:href="@{/css/base.css}" />
+    <link rel="stylesheet" th:href="@{/css/login.css}" />
 </head>
 <body>
-	<h1>Login</h1>
-	<hr/>
-	
-	<div>
-		<div th:if="${param.error}">
-			Invalid username or password.
-		</div>
-		<div th:if="${param.logout}">
-			You have been logged out from the application.
-		</div>
-		<form th:action="@{/login}" method="post" id="loginForm">
-			<input type="text" name="email" placeholder="Enter email"></input>
-			<br/><br/>
-			<input type="password" name="password" placeholder="Enter password"></input>
-			<br/><br/>
-			<button type="submit">Login</button>
-		</form>
-		<a th:href="@{/register}">Register</a>
-	</div>
-	
-	<script th:src="@{/js/jquery.js}"></script>
-	<script th:src="@{/js/jquery-validator.js}"></script>
-	<script th:src="@{/js/login.js}"></script>
-	
+    <div class="box-layout justify-content-center">
+        <div class="card box-layout__box text-center">
+
+            <div class="card-header border-bottom-0 pb-0 bg-white">
+
+                <h2 class="box-layout__title">Expense Manager</h2>
+                <p class="box-layout__title">Tracker your expenses that never before!</p>
+            </div>
+
+            <div class="card-body pt-0">
+
+                <form id="loginForm" th:action="@{/login}" method="post">
+                    <div th:if="${param.error}">
+                        <div class="alert help-block">
+                            Invalid email or password
+                        </div>
+                    </div>
+                    <div th:if="${param.logout}">
+                        <div class="alert help-block">
+                            You have been logged out from the application
+                        </div>
+                    </div>
+                    <input type="text"
+                           name="email"
+                           placeholder="Enter email"
+                           class="form-control mb-3"
+                           autofocus="autofocus" />
+
+                    <input type="password"
+                           name="password"
+                           placeholder="Enter password"
+                           class="form-control mb-3" />
+
+                    <button type="submit" class="btn form-control button_default text">Login</button>
+                </form>
+
+            </div>
+
+            <div class="card-footer bg-white border-top-0">
+                <span class="float-right">
+                    New User? - <a th:href="@{/register}"
+                                   class="base-color font-weight-bold">Register</a>
+                </span>
+            </div>
+
+        </div>
+    </div>
+    <script th:src="@{/js/jquery.js}"></script>
+    <script th:src="@{/js/jquery-validator.js}"></script>
+    <script th:src="@{/js/bootstrap.js}"></script>
+    <script th:src="@{/js/login.js}"></script>
 </body>
 </html>
