--- a/expense-manager-webapp/src/main/resources/templates/expense-form.html
+++ b/expense-manager-webapp/src/main/resources/templates/expense-form.html
@@ -58,6 +58,7 @@
     				<option th:value="Bills" th:text="Bills"></option>
     				<option th:value="Savings" th:text="Savings"></option>
     				<option th:value="Micellnous" th:text="Miscellnous"></option>
+    				<option th:value="Grocery" th:text="Grocery"></option>
 				</select>
 				
                 <textarea rows="5"
