--- a/expense-manager-webapp/src/main/resources/templates/expenses-list.html
+++ b/expense-manager-webapp/src/main/resources/templates/expenses-list.html
@@ -32,7 +32,10 @@
 				<div class="mt-4">
 					<a class="btn button_default text-white"
 					   th:href="@{/createExpense}">Create Expense</a>
+					 <a class="btn button_default text-white"
+					   th:href="@{/expenseChart}">View Chart</a>
 				</div>
+				
 			</div>
 		</div>
 		<div class="app-header">
